<resources>
    <string name="app_name">Trippar</string>
    <string name="title_activity_test_activty">TestActivty</string>
    <string name="title_home">Home</string>
    <string name="title_location">Location</string>
    <string name="title_notifications">Notifications</string>
    <string name="forgot_your_password"><u>Forgot your Password?</u></string>
    <string name="creat_account"><u>Creat Account</u></string>
    <string name="by_tapping_create_account_you_will_accept_all">By tapping \"Create Account"\ , You will accept all</string>
    <string name="terms_conditions"><b><![CDATA[Terms & Conditions]]></b></string>
    <string name="privacy_policy"><b><![CDATA[Privacy & Policy]]></b></string>
    <string name="title_settings">Settings</string>
    <string name="to_confirm_your_account">To confirm your account, enter the 4 digit code send to</string>
    <string name="stevejobs_gmail_com">stevejobs@gmail.com</string>

    <string name="check_your_email"><b>Check your email</b></string>
    <string name="try_another_way"><u>Try another way.</u></string>
    <string name="create_new_password"><b>Create New Password</b></string>
    <string name="your_new_password_must_be_different">Your new password must be different from previous used password.</string>
    <string name="TesetPassword">Reset Password</string>
    <string name="ResetPassword_description">Please enter your Email associated with this account, we will send the link to reset your password.</string>

    <string name="map_key" translatable="false">AIzaSyD_mZw1yfQQ45-vOdYNadpB5nECIXh2U_4</string>

    <string name="chat_room_message">Hello Dear!
    \nChat Room is available now. You can now share your issues here.
        \n Many users of trippar are there, so anyone may answer your query.
        \n Or we are always here for you!
    </string>
    <string name="weather_string">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>