<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.trippar.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.example.trippar.ui.location.LocationFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.example.trippar.ui.weather.WeatherFragment"
        android:label="@string/weather_string"
        tools:layout="@layout/weather_fragment" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.trippar.ui.notification.NotificationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.trippar.ui.SettingsFragment.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>