<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/back_arrow_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="#0000ffff"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:layout_marginTop="10dp"


        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TesetPassword"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ResetPassword_description"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="40dp"
            android:textSize="13sp"
            />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="9dp"
            app:strokeWidth="1dp"
            app:strokeColor="#DDDDDD"
            android:layout_marginTop="32dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_email_reset_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter the email"
                    android:background="@drawable/text_bgcolor"
                    android:inputType="textEmailAddress"
                    android:textSize="13sp"/>



            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <Button
            android:id="@+id/send_link_btn"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="Send Link"
            android:textSize="13sp"
            android:textAllCaps="false"
            android:layout_marginTop="30dp"

            />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:orientation="vertical"
        android:gravity="bottom"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/try_another_way"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            android:textSize="13sp"
            />



    </LinearLayout>


</LinearLayout>