<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_back_signup"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="17dp">
    </Button>


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/tripparlogo"
        android:layout_marginTop="40dp">

    </ImageView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        app:cardCornerRadius="9dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:inputType="text"
                android:background="@drawable/text_bgcolor"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="15dp">

            </EditText>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="#F0F0F0"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="14dp"
                />

            <EditText
                android:id="@+id/email_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_bgcolor"
                android:layout_marginHorizontal="16dp">

            </EditText>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="#F0F0F0"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="14dp"
                />

            <EditText
                android:id="@+id/password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_bgcolor"
                android:layout_marginHorizontal="16dp">

            </EditText>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="#F0F0F0"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="14dp"
                />

            <EditText
                android:id="@+id/confirm_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_bgcolor"
                android:layout_marginHorizontal="16dp">

            </EditText>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="Creat Account"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="22dp">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="140dp"
        android:layout_marginHorizontal="22dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_tapping_create_account_you_will_accept_all">

        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" and ">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy">

            </TextView>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>